# scout

./: .cproject  .gitignore  .project  BUGS.txt  CMakeLists.txt  License.md  License.txt  Makefile  README.md  ReadMe.txt  ToDo.txt  scout.sublime-workspace
cmake/: CMakeLists.txt
cmake/Config/: Scout.cmake.in
cmake/Modules/: FindCUDA.cmake  FindClang.cmake  FindEXPECT.cmake  FindGDB.cmake  FindGLFW.cmake  FindGLUT.cmake  FindHWLOC.cmake  FindLIBEDIT.cmake  FindLLDB.cmake  FindMPI.cmake  FindOpenCL.cmake  FindOpenGLVersion.cmake  FindPNG.cmake  FindQT5.cmake  FindR.cmake  FindSDL.cmake  FindTBB.cmake  FindTHRUST.cmake  FindXCODE.cmake  ScoutConfig.cmake  ScoutLLVMConfig.cmake  sc-llvm-link-libs.cmake  scout-llvm-defs.cmake
cmake/Modules/FindCUDA/: cuda_compute_capability.c
cmake/Scout/: CMakeDetermineCompilerId.cmake  CMakeDetermineSCCCompiler.cmake  CMakeDetermineSCCXXCompiler.cmake  CMakeDetermineSCXXCompiler.cmake  CMakeSCCCompiler.cmake.in  CMakeSCCCompilerABI.sc  CMakeSCCInformation.cmake  CMakeSCCXXCompiler.cmake.in  CMakeSCCXXCompilerId.sc++.in  CMakeSCXXCompiler.cmake.in  CMakeSCXXCompilerId.scpp.in  CMakeSCXXInformation.cmake  CMakeTestSCCCompiler.cmake  CMakeTestSCXXCompiler.cmake  Compiler
cmake/Scout/Compiler/: SCC.cmake  SCCXX.cmake  SCXX.cmake
cmake/Scout/CompilerId/: SCC.cmake  SCXX.cmake
legion/: CMakeLists.txt
legion/legioncomposite/: .gitignore  AccelDescriptor.h  CUDAMarchingCubes.cu  CUDAMarchingCubes.h  DataMgr.cc  DataMgr.h  Makefile  README.md  commonStructs.h  composite.cc  composite.h  cuda_helper.h  isosurface_render_kernel.cc  matrix_camera.cu  mesh_hit.cu  radical_inverse_jitter.cc  radical_inverse_jitter.h  render_kernel.cu
legion/legioncomposite/CompositeViewer/: viewer.cc
legion/legioncomposite/QtViewer/: QtViewer.pro  imagecomposer.cpp  imagecomposer.h  interact.cc  interact.h
legion/liblsci/: .ycm_extra_conf.py  Makefile  README.md
legion/liblsci/lib/: Makefile  lsci-private.h  lsci.cc  lsci.h
legion/liblsci/test/: CMakeLists.txt  Makefile  c-unimesh.c  c-veccp.c  enums.cpp  mesh-gen-test.c  mesh-gen-v2.c
legion/runtime/: legion_utilities.h  shared_lowlevel.cc
legion/sclegion/: cg-mapper.h  sclegion.cc  sclegion.h
legion/sclegion/test/: CMakeLists.txt  Makefile  fieldskip.cpp  init.cpp  part.cpp
legion/scrt_legion/: scrt_legion.cc  scrt_legion.h
lib/: CMakeLists.txt
lib/Compiler/: CMakeLists.txt
lib/Compiler/llvm/: CMakeLists.txt
lib/Config/: CMakeLists.txt  Configuration.cpp.cmake
lib/NewRuntime/: CMakeLists.txt  Image.cpp  RenderTarget.cpp  Viewport.cpp  Window.cpp  graphics.cpp  png-utils.cpp
lib/OpenGL/: CMakeLists.txt
lib/Runtime/: CMakeLists.txt  DebugUtils.cpp  DeviceList.cpp  GraphicsCInterface.cpp  Initialization.cpp  LegionDummy.cpp  README.txt  RenderTarget.cpp  SaveMesh.cpp  Settings.cpp  Utilities.cpp  framebuffer.cpp  glyph_renderall.cpp  gpu.cpp  memalloc.cpp  renderall.cpp  renderall_base.cpp  renderall_uniform.cpp  scout.cpp  system.cpp  tbq.cpp  window.cpp  zbuffer.cpp
lib/Runtime/cpu/: Block.cpp  CpuDevice.cpp  CpuInitialization.cpp  CpuRuntime.cpp  MemAlloc.cpp  MeshThread.cpp  Queue.cpp  Settings.cpp  Thread.cpp  VSem.cpp  system.cpp  tbq.cpp
lib/Runtime/cuda/: CudaDevice.cpp  CudaInitialization.cpp  CudaRuntime.cpp  CudaUtilities.cpp  cuda-utils.cpp  scout_cuda.cpp
lib/Runtime/gpu/: CUDARuntime.cpp  GPURuntime.cpp
lib/Runtime/isosurf/: isosurface_cpp.cpp
lib/Runtime/mesh/: Mesh.h  MeshRuntime.cpp  MeshTopology.h
lib/Runtime/mpi/: volume_renderall.cpp
lib/Runtime/numa/: NumaDevice.cpp  NumaInitialization.cpp  NumaInitialize.cpp  NumaUtilities.cpp
lib/Runtime/old/: CMakeLists.txt  Initialization.cpp  framebuffer.cpp  init_mac.mm  scout.cpp  window.cpp
lib/Runtime/opencl/: scout_opencl.cpp
lib/Runtime/opengl/: glBufferObject.cpp  glCamera.cpp  glDevice.cpp  glGlyphRenderable.cpp  glProgram.cpp  glQuadRenderableVA.cpp  glRenderable.cpp  glSDL.cpp  glShader.cpp  glTexture.cpp  glTexture1D.cpp  glTexture2D.cpp  glToolkit.cpp  glUniformRenderable.cpp  glUtilities.cpp  glWindow.cpp  opengl-utils.cpp
lib/Runtime/plot/: PlotRuntime.cpp
lib/Runtime/plot2/: PlotRuntime.cpp
lib/Runtime/png/: framebuffer-utils.cpp
lib/Runtime/renderall/: RenderallBase.cpp  RenderallGlyph.cpp  RenderallSurface.cpp  RenderallUniform.cpp  RenderallUtilities.cpp  glyph_renderall.cpp  renderall.cpp  renderall_base.cpp  renderall_surface.cpp  renderall_uniform.cpp
lib/Runtime/volren/: CudaVolumeTracer.cpp  CudaVolumeTracer.h  QuatVector.cpp  RenderallRuntime.cpp  Rotation.cpp  Tracer.cpp  Tracer.h  Trackball.cpp  VolumeRendererWindow.cpp  VolumeTracer.cpp  VolumeTracer.h  (+9 more)
lib/Standard/: CMakeLists.txt  CMakeLists.txt.in  color.sc  color.scpp  hsv.cpp  hsv.sc
lib/driver/: CudaDriver.cpp  PTXDriver.cpp
lib/runtime/: CMakeLists.txt  framebuffer.cpp  glyph_renderall.cpp  gpu.cpp  init_mac.mm  memalloc.cpp  renderall.cpp  renderall_base.cpp  renderall_cells.cpp  renderall_uniform.cpp  scout.cpp  scout_gpu.cpp  sysinfo_summary.cpp  system.cpp  tbq.cpp  volume_renderall.cpp  window.cpp  zbuffer.cpp
lib/standard/: CMakeLists.txt  hsv.cpp
test/macosx/: CMakeLists.txt  cocoa-test.cpp
test/mthread/: 2dpart.sc  3dpart.sc  CMakeLists.txt  heat_bodies_mt.sc
test/scc/: ALEmesh.sc  CMakeLists.txt  blocks.sc  blocks2.sc  builtins-scope.sc  builtins.sc  call-c.sc  cells.sc  const-dim-mesh.sc  const-expr-mesh-size.sc  const-mesh-size.sc  cshift-nonsq-mesh.sc  cshift-nonsq-mesh.sc.disabled  cshift-var.sc  cshift-vert.sc  cshift.sc  cshift2.sc  cshift2d.sc  cshift3d.sc  cshiftm.sc  empty-mesh.sc  enum-dim-mesh.sc  eoshift-nonsq-mesh.sc  eoshift-var.sc  eoshift.sc  eoshift2.sc  eoshiftm.sc  expr-mesh-size.sc  forall-array.sc  forall-array2.sc  forall-cells-edges-function.sc  forall-cells-edges.sc  forall-cells-edges1d.sc  forall-cells-edges3d.sc  forall-cells-faces-function.sc  forall-cells-faces.sc  forall-cells-faces1d.sc  forall-cells-vertices-function.sc  forall-cells-vertices.sc  forall-cells-vertices3d.sc  (+84 more)
test/volren/: CMakeLists.txt  combustion-volren.sc  heat3d.sc  volren.sc  volrenmp.sc
(+2242 files in other folders)
